crates/typecheck/tests/fixtures/errors/assign_to_immutable.ax
fn main() { val x = 1 x = 2 }